intro section mobile fixes

--- a/css/style.css
+++ b/css/style.css
@@ -644,7 +644,7 @@ footer i {
 
     .intro_btns {
         width: 100%;
-        justify-content: center;
+        /* justify-content: center; */
     }
 
     .about_col {
